Uniformise some flags, more deployment docs